# tama96

./: .gitignore  Cargo.toml  README.md  plan.md  tasks-v1.md
.github/workflows/: release.yml
.kiro/settings/: mcp.json
.kiro/specs/tama96/: .config.kiro  design.md  requirements.md  tasks.md
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: bridge.ts  index.ts  resources.ts  tools.ts
scripts/: prepare-desktop-release-aliases.mjs  prepare-mcp-bundle.mjs  prepare-release.mjs  sync-version.mjs
tama-core/: Cargo.toml
tama-core/src/: actions.rs  characters.rs  engine.rs  evolution.rs  lib.rs  permissions.rs  persistence.rs  state.rs
tama-core/tests/: integration_tests.rs  lockfile_integration_tests.rs  mcp_integration_tests.rs  property_tests.rs
tama-tauri/src-tauri/: Cargo.toml  Credits.rtf  tauri.conf.json
tama-tauri/src-tauri/capabilities/: default.json
tama-tauri/src-tauri/icons/: icon.icns
tama-tauri/src-tauri/src/: commands.rs  main.rs  sidecar.rs  socket.rs
tama-tauri/ui/: index.html  package-lock.json  package.json  tsconfig.node.json
tama-tauri/ui/src/: App.tsx  types.ts
tama-tauri/ui/src/components/: AboutPanel.tsx  ActionBar.tsx  DeathScreen.tsx  PermissionsPanel.tsx  PetDisplay.tsx
tama-tauri/ui/src/hooks/: usePetState.ts
tama-tui/: Cargo.toml
tama-tui/src/: main.rs  sprites.rs
website/: astro.config.mjs  package-lock.json  package.json
website/.astro/: data-store.json  settings.json
website/src/layouts/: Base.astro
website/src/pages/: docs.astro  download.astro  index.astro
