[package]
name = "tama-tauri"
version = "0.1.0"
edition = "2024"

[dependencies]
tama-core = { path = "../../tama-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
