[package]
name = "tama-tauri"
version = "0.1.10"
edition = "2024"

[[bin]]
name = "tama96"
path = "src/main.rs"

[dependencies]
tama-core = { path = "../../tama-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
